Base layout mostly complete.  Looking for overflow fix

--- a/style.css
+++ b/style.css
@@ -15,13 +15,17 @@
 .sidebar {
 	display: grid;
 	grid-template-rows: 1fr 1fr;
-	grid-row: 1 / span 2;
+	grid-row: 1 / 3;
 	background-color: rgba(39, 121, 228, 0.993);
 	min-width: 150px;
 	max-width: 250px;
 	padding-left: 25px;
 }
 
+.main-content {
+	grid-row: 2;
+	grid-column: 2;
+}
 .main-nav {
 	display: flex;
 	flex-flow: column;
@@ -72,12 +76,13 @@
 	background-color: azure;
 	border-radius: 10px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+	grid-row: 4;
+	padding: 10px;
 }
 
 .trending-head {
 	grid-row: 3;
-	grid-column: 3;
-	z-index: 1;
+	margin: 10px;
 }
 
 .announcement-container {
@@ -85,7 +90,6 @@
 	grid-template-rows: 1fr 1fr 1fr;
 	grid-template-columns: 1fr;
 	padding: 0px 20px;
-	gap: 10px 10px;
 }
 
 .trending-container {
@@ -98,12 +102,14 @@
 .announcements {
 	background-color: azure;
 	border-radius: 10px;
+	margin: 5px;
+	padding: 10px 5px 20px 10px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
 }
 
 .announce-head {
 	grid-row: 1;
-	grid-column: 1;
+	margin: 10px;
 }
 
 .content {
@@ -121,7 +127,7 @@
 
 .project-head {
 	margin: 10px;
-	grid-column: 1 / span 2;
+	grid-column: 1 / 3;
 }
 
 .projects {
@@ -132,20 +138,6 @@
 	padding: 10px 5px 20px 10px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
 }
-
-.announce-head {
-	grid-column: 3;
-}
-
-/* .content-right {
-	display: grid;
-	grid-template-rows: 0.1fr 1fr 0.1fr 1fr;
-	grid-column: 3;
-	grid-row: 1 / span 4;
-	gap: 5px 10px;
-	padding-right: 20px;
-	padding-bottom: 5px;
-} */
 
 .maintenance {
 	grid-row: 1;
@@ -234,7 +226,7 @@
 	line-height: 0.5;
 }
 
-#h3 {
+.name {
 	margin-top: 2px;
 }
 .smallGreeting {
@@ -246,8 +238,15 @@
 }
 
 .news {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 0.1fr 0.7fr 0.1fr 0.7fr;
 	grid-column: 3;
-	grid-row: 2/4;
+	grid-row: 1/5;
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-bottom: 20px;
+	padding-right: 20px;
 }
 
 .trending1,
